--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.81_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.81:2.4": "Niemand sollte ihm jetzt folgen.“ ",
   "sn22.81:3.1": "Der Buddha wanderte Stück für Stück, bis er nach Pārileyya kam, ",
   "sn22.81:3.2": "und blieb dort am Fuß eines glückverheißenden Salbaumes. ",
-  "sn22.81:3.3": "Da gingen einige Mönche und Nonnen zum Ehrwürdigen Ānanda und tauschten Willkommensgrüße mit ihm aus. "
+  "sn22.81:3.3": "Da gingen einige Mönche und Nonnen zum Ehrwürdigen Ānanda und tauschten Willkommensgrüße mit ihm aus. ",
+  "sn22.81:3.4": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin und sagten zu ihm: "
 }
