--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -67,7 +67,7 @@
   "pli-tv-kd13:2.2.10": "I had committed one unconcealed offense of intentional emission of semen. ",
   "pli-tv-kd13:2.2.11": "I asked the Sangha for the trial period of six days for that offense, ",
   "pli-tv-kd13:2.2.12": "and the Sangha gave me the trial period. ",
-  "pli-tv-kd13:2.2.13": "I have now completed the trial period and for the third time I ask the Sangha for rehabilitation.’ ",
+  "pli-tv-kd13:2.2.13": "I’ve now completed the trial period and for the third time I ask the Sangha for rehabilitation.’ ",
   "pli-tv-kd13:2.3.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:2.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:2.3.3": "The monk Udāyī had committed one unconcealed offense of intentional emission of semen. ",
