--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -112,7 +112,7 @@
   "pli-tv-kd13:3.1.6": "“Well then, the Sangha should give the monk Udāyī probation for one day for one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:3.2.1": "And it should be given like this: ",
   "pli-tv-kd13:3.2.2": "The monk Udāyī should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say: ",
-  "pli-tv-kd13:3.2.3": "‘Venerables, I have committed one offense of intentional emission of semen, concealed for one day. ",
+  "pli-tv-kd13:3.2.3": "‘Venerables, I’ve committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:3.2.4": "I ask the Sangha for probation for one day for that offense.’ ",
   "pli-tv-kd13:3.2.5": "And he should ask a second ",
   "pli-tv-kd13:3.2.6": "and a third time. ",
