--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -124,7 +124,7 @@
   "pli-tv-kd13:3.3.6": "This is the motion. ",
   "pli-tv-kd13:3.3.7": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:3.3.8": "The monk Udāyī has committed one offense of intentional emission of semen, concealed for one day. ",
-  "pli-tv-kd13:3.3.9": "He is asking the Sangha for probation for one day for that offense. ",
+  "pli-tv-kd13:3.3.9": "He’s asking the Sangha for probation for one day for that offense. ",
   "pli-tv-kd13:3.3.10": "The Sangha gives him that probation. ",
   "pli-tv-kd13:3.3.11": "Any monk who approves of giving him that probation should remain silent. ",
   "pli-tv-kd13:3.3.12": "Any monk who doesn’t approve should speak up. ",
