--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -137,7 +137,7 @@
   "pli-tv-kd13:4.1.2": "“I had committed one offense of intentional emission of semen, concealed for one day. ",
   "pli-tv-kd13:4.1.3": "I asked the Sangha for probation for one day for that offense. ",
   "pli-tv-kd13:4.1.4": "The Sangha gave me that probation, ",
-  "pli-tv-kd13:4.1.5": "and I have now completed it. ",
+  "pli-tv-kd13:4.1.5": "and I’ve now completed it. ",
   "pli-tv-kd13:4.1.6": "What should I do now?” ",
   "pli-tv-kd13:4.1.7": "They told the Buddha. ",
   "pli-tv-kd13:4.1.8": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for one offense of intentional emission of semen, concealed for one day. ",
