--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -234,7 +234,7 @@
   "pli-tv-kd13:6.1.16": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:6.1.17": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:6.1.18": "The monk Udāyī has committed one offense of intentional emission of semen, concealed for five days. ",
-  "pli-tv-kd13:6.1.19": "He is asking the Sangha for probation for five days for that offense. ",
+  "pli-tv-kd13:6.1.19": "He’s asking the Sangha for probation for five days for that offense. ",
   "pli-tv-kd13:6.1.20": "If it seems appropriate to the Sangha, the Sangha should give him that probation. ",
   "pli-tv-kd13:6.1.21": "This is the motion. ",
   "pli-tv-kd13:6.1.22": "Please, Venerables, I ask the Sangha to listen. ",
