--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -314,7 +314,7 @@
   "pli-tv-kd13:8.3.2": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:8.3.3": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:8.3.4": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:8.3.5": "He is asking the Sangha to send him back to the beginning for that offense, committed while deserving the trial period. ",
+  "pli-tv-kd13:8.3.5": "He’s asking the Sangha to send him back to the beginning for that offense, committed while deserving the trial period. ",
   "pli-tv-kd13:8.3.6": "If it seems appropriate to the Sangha, the Sangha should send him back to the beginning. ",
   "pli-tv-kd13:8.3.7": "This is the motion. ",
   "pli-tv-kd13:8.3.8": "Please, Venerables, I ask the Sangha to listen. ",
