--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -320,7 +320,7 @@
   "pli-tv-kd13:8.3.8": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:8.3.9": "The monk Udāyī had committed one offense of intentional emission of semen, concealed for five days. … ",
   "pli-tv-kd13:8.3.10": "When he had completed the probation, while deserving the trial period, he committed one unconcealed offense of intentional emission of semen. ",
-  "pli-tv-kd13:8.3.11": "He is asking the Sangha to send him back to the beginning for that offense, committed while deserving the trial period. ",
+  "pli-tv-kd13:8.3.11": "He’s asking the Sangha to send him back to the beginning for that offense, committed while deserving the trial period. ",
   "pli-tv-kd13:8.3.12": "The Sangha sends him back to the beginning. ",
   "pli-tv-kd13:8.3.13": "Any monk who approves of sending him back to the beginning should remain silent. ",
   "pli-tv-kd13:8.3.14": "Any monk who doesn’t approve should speak up. ",
