--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -331,7 +331,7 @@
   "pli-tv-kd13:9.1.0": "1.9 Trial period for the three offenses ",
   "pli-tv-kd13:9.1.1": "When he had completed the probation, he told the monks, ",
   "pli-tv-kd13:9.1.2": "“I had committed one offense of intentional emission of semen, concealed for five days … ",
-  "pli-tv-kd13:9.1.3": "I have now completed the probation. ",
+  "pli-tv-kd13:9.1.3": "I’ve now completed the probation. ",
   "pli-tv-kd13:9.1.4": "What should I do now?” ",
   "pli-tv-kd13:9.1.5": "They told the Buddha. ",
   "pli-tv-kd13:9.1.6": "“Well then, the Sangha should give the monk Udāyī the trial period of six days for the three offenses. ",
