--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -341,7 +341,7 @@
   "pli-tv-kd13:9.2.4": "‘Venerables, I had committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:9.2.5": "I asked the Sangha for probation for five days for that offense, ",
   "pli-tv-kd13:9.2.6": "and the Sangha gave me that probation. … ",
-  "pli-tv-kd13:9.2.7": "I have now completed that probation and I ask the Sangha for the trial period of six days for the three offenses.’ ",
+  "pli-tv-kd13:9.2.7": "I’ve now completed that probation and I ask the Sangha for the trial period of six days for the three offenses.’ ",
   "pli-tv-kd13:9.2.8": "And he should ask a second ",
   "pli-tv-kd13:9.2.9": "and a third time. ",
   "pli-tv-kd13:9.3.1": "A competent and capable monk should then inform the Sangha: ",
