--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -500,7 +500,7 @@
   "pli-tv-kd13:13.1.14": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd13:13.1.15": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:13.1.16": "The monk Udāyī has committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:13.1.17": "He is asking the Sangha for probation for a half-month for that offense. ",
+  "pli-tv-kd13:13.1.17": "He’s asking the Sangha for probation for a half-month for that offense. ",
   "pli-tv-kd13:13.1.18": "If it seems appropriate to the Sangha, the Sangha should give him that probation. ",
   "pli-tv-kd13:13.1.19": "This is the motion. ",
   "pli-tv-kd13:13.1.20": "Please, Venerables, I ask the Sangha to listen. ",
