--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -505,7 +505,7 @@
   "pli-tv-kd13:13.1.19": "This is the motion. ",
   "pli-tv-kd13:13.1.20": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:13.1.21": "The monk Udāyī has committed one offense of intentional emission of semen, concealed for a half-month. ",
-  "pli-tv-kd13:13.1.22": "He is asking the Sangha for probation for a half-month for that offense. ",
+  "pli-tv-kd13:13.1.22": "He’s asking the Sangha for probation for a half-month for that offense. ",
   "pli-tv-kd13:13.1.23": "The Sangha gives him that probation. ",
   "pli-tv-kd13:13.1.24": "Any monk who approves of giving him that probation should remain silent. ",
   "pli-tv-kd13:13.1.25": "Any monk who does not approve should speak up. ",
