--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -93,5 +93,6 @@
   "sn22.82:14.1": "Was denkt ihr, Mönche und Nonnen? ",
   "sn22.82:14.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.82:14.3": "„Unbeständig, Herr.“ ",
-  "sn22.82:14.4": "„Ist Gefühl …“ … "
+  "sn22.82:14.4": "„Ist Gefühl …“ … ",
+  "sn22.82:14.5": "„Ist Wahrnehmung …“ … "
 }
