--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -98,5 +98,6 @@
   "sn22.82:14.6": "„Sind Entscheidungen …“ … ",
   "sn22.82:14.7": "„Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.82:14.8": "„Unbeständig, Herr.“ ",
-  "sn22.82:14.9": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn22.82:14.9": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn22.82:14.10": "„Leiden, Herr.“ "
 }
