--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -99,5 +99,6 @@
   "sn22.82:14.7": "„Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.82:14.8": "„Unbeständig, Herr.“ ",
   "sn22.82:14.9": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
-  "sn22.82:14.10": "„Leiden, Herr.“ "
+  "sn22.82:14.10": "„Leiden, Herr.“ ",
+  "sn22.82:14.11": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
 }
