--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -103,5 +103,6 @@
   "sn22.82:14.11": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn22.82:14.12": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.82:14.13": "„Nein, Herr.“ ",
-  "sn22.82:14.14": "„Daher solltet ihr jegliche Art … sehen … "
+  "sn22.82:14.14": "„Daher solltet ihr jegliche Art … sehen … ",
+  "sn22.82:14.15": "Wenn er das sieht … "
 }
