--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -104,5 +104,6 @@
   "sn22.82:14.12": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.82:14.13": "„Nein, Herr.“ ",
   "sn22.82:14.14": "„Daher solltet ihr jegliche Art … sehen … ",
-  "sn22.82:14.15": "Wenn er das sieht … "
+  "sn22.82:14.15": "Wenn er das sieht … ",
+  "sn22.82:14.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
 }
