--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.82_translation-de-sabbamitta.json
@@ -106,7 +106,7 @@
   "sn22.82:14.14": "„Daher solltet ihr jegliche Art … sehen … ",
   "sn22.82:14.15": "Wenn er das sieht … ",
   "sn22.82:14.16": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
-  "sn22.82:15.1": "„Zwei über die Aggregate; genau das Gleiche; und kann es sein; ",
+  "sn22.82:15.1": "„Zwei über die Aggregate; genau dasselbe; und kann es geben; ",
   "sn22.82:15.2": "über den Ausdruck; und über die Ursache; ",
   "sn22.82:15.3": "zwei Fragen zur Persönlichkeit; ",
   "sn22.82:15.4": "vorteilhafte folgen; und das mit Bewusstsein; ",
