--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn109:0.1": "Mittlere Lehrreden 109 ",
   "mn109:0.2": "Die längere Lehrrede über die Vollmondnacht ",
   "mn109:1.1": "So habe ich es gehört: ",
-  "mn109:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. "
+  "mn109:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
+  "mn109:2.1": "Zu der Zeit, es war der Besinnungstag, der Vollmond am fünfzehnten Tag, saß der Buddha inmitten des Saṅgha der Mönche im Freien. "
 }
