--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "mn109:3.1": "Da erhob sich einer der Mönche von seinem Sitz, ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
   "mn109:3.2": "„Herr, ich würde den Buddha gerne über einen bestimmten Punkt befragen, wenn du die Zeit nehmen wolltest, zu antworten.“ ",
   "mn109:3.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ ",
-  "mn109:3.4": "Jener Mönch setzte sich und sagte zum Buddha: "
+  "mn109:3.4": "Jener Mönch setzte sich und sagte zum Buddha: ",
+  "mn109:4.1": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich "
 }
