--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "mn109:3.3": "„Nun, Mönch, nimm auf deinem Sitz Platz und frage, was du willst.“ ",
   "mn109:3.4": "Jener Mönch setzte sich und sagte zum Buddha: ",
   "mn109:4.1": "„Herr, gibt es die fünf mit Ergreifen verbundenen Aggregate: nämlich ",
-  "mn109:4.2": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein?“ "
+  "mn109:4.2": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein?“ ",
+  "mn109:4.3": "„Ja, es gibt sie“, sagte der Buddha. "
 }
