--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn109:4.2": "Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein?“ ",
   "mn109:4.3": "„Ja, es gibt sie“, sagte der Buddha. ",
   "mn109:4.5": "Mit den Worten „gut, Herr“ begrüßte jener Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
-  "mn109:5.1": "„Aber Herr, was ist die Wurzel dieser fünf mit Ergreifen verbundenen Aggregate?“ "
+  "mn109:5.1": "„Aber Herr, was ist die Wurzel dieser fünf mit Ergreifen verbundenen Aggregate?“ ",
+  "mn109:5.2": "„Diese fünf mit Ergreifen verbundenen Aggregate wurzeln im Verlangen.“ "
 }
