--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn109:4.3": "„Ja, es gibt sie“, sagte der Buddha. ",
   "mn109:4.5": "Mit den Worten „gut, Herr“ begrüßte jener Mönch die Worte des Buddha und stimmte ihm zu. Dann stellte er eine weitere Frage: ",
   "mn109:5.1": "„Aber Herr, was ist die Wurzel dieser fünf mit Ergreifen verbundenen Aggregate?“ ",
-  "mn109:5.2": "„Diese fünf mit Ergreifen verbundenen Aggregate wurzeln im Verlangen.“ "
+  "mn109:5.2": "„Diese fünf mit Ergreifen verbundenen Aggregate wurzeln im Verlangen.“ ",
+  "mn109:6.1": "„Aber Herr, ist das Ergreifen genau dasselbe wie die fünf mit Ergreifen verbundenen Aggregate? Oder ist das Ergreifen ein Ding, und die fünf mit Ergreifen verbundenen Aggregate sind ein anderes?“ "
 }
