--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "mn109:6.2": "„Weder das eine noch das andere. ",
   "mn109:6.3": "Vielmehr ist das Sehnen und Begehren nach ihnen das Ergreifen hier.“ ",
   "mn109:7.1": "„Aber Herr, kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben?“ ",
-  "mn109:7.2": "„Das kann es geben“, sagte der Buddha. "
+  "mn109:7.2": "„Das kann es geben“, sagte der Buddha. ",
+  "mn109:7.3": "„Da denkt jemand: "
 }
