--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "mn109:7.3": "„Da denkt jemand: ",
   "mn109:7.4": "‚Dass ich doch in der Zukunft solche Form, solches Gefühl, solche Wahrnehmung, solche Entscheidungen und solches Bewusstsein hätte!‘ ",
   "mn109:7.5": "So kann es verschiedene Arten von Sehnen und Begehren nach den fünf mit Ergreifen verbundenen Aggregaten geben.“ ",
-  "mn109:8.1": "„Herr, was ist die Reichweite des Ausdrucks ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ "
+  "mn109:8.1": "„Herr, was ist die Reichweite des Ausdrucks ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ ",
+  "mn109:8.2": "„Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. "
 }
