--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "mn109:8.1": "„Herr, was ist die Reichweite des Ausdrucks ‚Aggregate‘, wie er für die Aggregate verwendet wird?“ ",
   "mn109:8.2": "„Jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Form-Aggregat. ",
   "mn109:8.3": "Jegliche Art von Gefühl … ",
-  "mn109:8.4": "Jegliche Art von Wahrnehmung … "
+  "mn109:8.4": "Jegliche Art von Wahrnehmung … ",
+  "mn109:8.5": "Jegliche Art von Entscheidungen … "
 }
