--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "mn109:8.3": "Jegliche Art von Gefühl … ",
   "mn109:8.4": "Jegliche Art von Wahrnehmung … ",
   "mn109:8.5": "Jegliche Art von Entscheidungen … ",
-  "mn109:8.6": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. "
+  "mn109:8.6": "Jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: Das nennt man das Bewusstseins-Aggregat. ",
+  "mn109:8.7": "Das ist die Reichweite des Ausdrucks ‚Aggregate‘, wie er für die Aggregate verwendet wird.“ "
 }
