--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "mn109:9.2": "Was ist der Grund, was ist die Ursache, dass das Gefühls-Aggregat … ",
   "mn109:9.3": "das Wahrnehmungs-Aggregat … ",
   "mn109:9.4": "das Entscheidungs-Aggregat … ",
-  "mn109:9.5": "das Bewusstseins-Aggregat zu finden ist?“ "
+  "mn109:9.5": "das Bewusstseins-Aggregat zu finden ist?“ ",
+  "mn109:9.6": "„Die vier Grundelemente sind der Grund und die Ursache, dass das Form-Aggregat zu finden ist. "
 }
