--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "mn109:9.3": "das Wahrnehmungs-Aggregat … ",
   "mn109:9.4": "das Entscheidungs-Aggregat … ",
   "mn109:9.5": "das Bewusstseins-Aggregat zu finden ist?“ ",
-  "mn109:9.6": "„Die vier Grundelemente sind der Grund und die Ursache, dass das Form-Aggregat zu finden ist. "
+  "mn109:9.6": "„Die vier Grundelemente sind der Grund und die Ursache, dass das Form-Aggregat zu finden ist. ",
+  "mn109:9.7": "Berührung ist der Grund und die Ursache, dass das Gefühls-Aggregat, "
 }
