--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.83_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn22.83:2.1": "„Werte Freunde, der Ehrwürdige mit Namen Puṇṇa, der Sohn Mantāṇīs, war mir eine große Hilfe, als ich gerade ordiniert war. ",
   "sn22.83:2.2": "Er gab mir diesen Rat: ",
   "sn22.83:2.3": "‚Werter Ānanda, die Idee ‚ich bin‘ kommt auf, weil man ergreift, nicht, weil man nicht ergreift. ",
-  "sn22.83:2.4": "Wenn man was ergreift? ",
+  "sn22.83:2.4": "Weil man was ergreift? ",
   "sn22.83:2.5": "Die Idee ‚ich bin‘ kommt auf, wenn man Form ergreift, ",
   "sn22.83:2.6": "wenn man Gefühl ergreift, ",
   "sn22.83:2.7": "Wahrnehmung, wenn man Wahrnehmung ergreift, ",
